--- a/src/styles/NavStyles.css
+++ b/src/styles/NavStyles.css
@@ -1,9 +1,11 @@
 .nav {
   background-color: rgba(0, 60, 255, 0.897);
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-content: center;
   text-align: center;
+
   padding: 5px;
 }
 
@@ -18,6 +20,7 @@
   flex: wrap;
   padding: 5px;
   justify-content: space-around;
+  align-items: center;
 }
 
 .nav-column {
