--- a/src/styles/CommentStyles.css
+++ b/src/styles/CommentStyles.css
@@ -1,7 +1,7 @@
 .comment-row {
   display: flex;
   flex-direction: row;
-  flex: wrap;
+  /*flex: wrap;*/
   padding: 5px;
   justify-content: flex-start;
   align-items: center;
