--- a/src/styles/NavStyles.css
+++ b/src/styles/NavStyles.css
@@ -17,7 +17,7 @@
 .nav-row {
   display: flex;
   flex-direction: row;
-  flex: wrap;
+  /*flex: wrap;*/
   padding: 5px;
   justify-content: space-around;
   align-items: center;
